# named-entity-extraction-app

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
server/: main.py  ner.py  qa.py
server/routers/: ie.py
server/schemas/: ie.py
