[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pandas = "^1.4.2"
ja-timex = "^0.2.5"
requests = "^2.27.1"
transformers = ">=4.6.1"
ginza = "^5.1.1"
ja-ginza = "^5.1.0"
ja-ginza-electra = "^5.1.0"
tensorflow = ">=2.0.0"
spacy-transformers = "1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
